feat: 게시판 표 레이아웃, 번호/조회수/작성일, 카테고리 필터, 페이징, 댓글 삭제, 홈 공지·커뮤니티 연동, 모집완료 표시, 최신순 정렬
Co-authored-by: Cursor <cursoragent@cursor.com>