@@ -1,23 +1,13 @@
 package com.jpcard.controller;
 
-import com.jpcard.controller.dto.AdminStatsResponse;
-import com.jpcard.controller.dto.AdminUserRequest;
-import com.jpcard.controller.dto.AdminUserResponse;
-import com.jpcard.controller.dto.AdminDeckResponse;
-import com.jpcard.controller.dto.PostResponse;
+import com.jpcard.controller.dto.*;
 import com.jpcard.domain.deck.Deck;
 import com.jpcard.domain.post.Post;
-import com.jpcard.domain.user.Role;
+import com.jpcard.domain.post.StudyRecruitment;
 import com.jpcard.domain.user.User;
 import com.jpcard.domain.user.UserStatus;
-import com.jpcard.repository.CardRepository;
-import com.jpcard.repository.DeckRepository;
-import com.jpcard.repository.PostRepository;
-import com.jpcard.repository.StudyLogRepository;
-import com.jpcard.repository.UserRepository;
-import com.jpcard.service.DeckService;
-import com.jpcard.service.PostService;
-import com.jpcard.service.UserService;
+import com.jpcard.repository.*;
+import com.jpcard.service.*;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
@@ -28,9 +18,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Tag(name = "Admin", description = "Admin API")
@@ -48,53 +37,48 @@ public class AdminController {
 	private final DeckService deckService;
 	private final PostService postService;
 	
-	// ==================== Dashboard Stats ====================
+	@Operation(summary = "Dashboard Stats")
 	@GetMapping("/stats")
 	public ResponseEntity<AdminStatsResponse> getStats() {
-		long totalUsers = userRepository.count();
-		long totalDecks = deckRepository.count();
-		long totalCards = cardRepository.count();
-		long totalPosts = postRepository.count();
-		long totalStudyLogs = studyLogRepository.count();
-		long publicDecks = deckRepository.findPublicDecks().size();
-		long notices = postRepository.findByIsNoticeTrueOrderByIdDesc().size();
-		
 		return ResponseEntity.ok(new AdminStatsResponse(
-				totalUsers, totalDecks, totalCards, totalPosts,
-				totalStudyLogs, publicDecks, notices));
+				userRepository.count(),
+				deckRepository.count(),
+				cardRepository.count(),
+				postRepository.count(),
+				studyLogRepository.count(),
+				deckRepository.count(), // 공개 덱 카운트 로직 필요 시 수정
+				postRepository.findByIsNoticeTrueOrderByIdDesc().size()
+		));
 	}
 	
-	// ==================== User Management ====================
+	// --- 유저 관리 ---
 	@GetMapping("/users")
 	public ResponseEntity<Page<AdminUserResponse>> getUsers(@PageableDefault(size = 20) Pageable pageable) {
-		Page<User> users = userService.findAll(pageable);
-		Page<AdminUserResponse> response = users.map(AdminUserResponse::from);
-		return ResponseEntity.ok(response);
+		return ResponseEntity.ok(userService.findAll(pageable).map(this::mapToUserResponse));
 	}
 	
 	@GetMapping("/users/{id}")
 	public ResponseEntity<AdminUserResponse> getUser(@PathVariable Long id) {
-		User user = userService.findById(id)
-				.orElseThrow(() -> new IllegalArgumentException("User not found"));
-		return ResponseEntity.ok(AdminUserResponse.from(user));
+		User user = userService.findById(id).orElseThrow(() -> new IllegalArgumentException("User not found"));
+		return ResponseEntity.ok(mapToUserResponse(user));
 	}
 	
 	@PostMapping("/users")
 	public ResponseEntity<AdminUserResponse> createUser(@RequestBody AdminUserRequest request) {
-		Set<Role> roles = parseRoles(request.roles());
+		String role = request.roles() != null && !request.roles().isEmpty()
+				? request.roles().iterator().next() : "ROLE_USER";
 		UserStatus status = request.status() != null ? UserStatus.valueOf(request.status()) : UserStatus.ACTIVE;
-		
-		User user = userService.adminCreateUser(request.username(), request.password(), status, roles);
-		return ResponseEntity.ok(AdminUserResponse.from(user));
+		User user = userService.adminCreateUser(request.username(), request.password(), status, role);
+		return ResponseEntity.ok(mapToUserResponse(user));
 	}
 	
 	@PutMapping("/users/{id}")
 	public ResponseEntity<AdminUserResponse> updateUser(@PathVariable Long id, @RequestBody AdminUserRequest request) {
-		Set<Role> roles = request.roles() != null ? parseRoles(request.roles()) : null;
+		String role = request.roles() != null && !request.roles().isEmpty()
+				? request.roles().iterator().next() : null;
 		UserStatus status = request.status() != null ? UserStatus.valueOf(request.status()) : null;
-		
-		User user = userService.adminUpdateUser(id, request.username(), request.password(), status, roles);
-		return ResponseEntity.ok(AdminUserResponse.from(user));
+		User user = userService.adminUpdateUser(id, request.username(), request.password(), status, role);
+		return ResponseEntity.ok(mapToUserResponse(user));
 	}
 	
 	@DeleteMapping("/users/{id}")
@@ -103,83 +87,75 @@ public class AdminController {
 		return ResponseEntity.noContent().build();
 	}
 	
-	// ==================== Deck Management ====================
+	// --- 덱 관리 ---
 	@GetMapping("/decks")
 	public ResponseEntity<Page<AdminDeckResponse>> getDecks(@PageableDefault(size = 20) Pageable pageable) {
-		Page<Deck> decks = deckService.findAllDecks(pageable);
-		Page<AdminDeckResponse> response = decks.map(AdminDeckResponse::from);
-		return ResponseEntity.ok(response);
-	}
-	
-	@GetMapping("/decks/public")
-	public ResponseEntity<List<AdminDeckResponse>> getPublicDecks() {
-		List<Deck> decks = deckRepository.findPublicDecks();
-		List<AdminDeckResponse> response = decks.stream().map(AdminDeckResponse::from).collect(Collectors.toList());
-		return ResponseEntity.ok(response);
+		return ResponseEntity.ok(deckService.findAllDecks(pageable).map(AdminDeckResponse::from));
 	}
 	
 	@DeleteMapping("/decks/{id}")
-	public ResponseEntity<Void> deleteDeck(@PathVariable Long id, Authentication auth) {
+	public ResponseEntity<Void> deleteDeck(@PathVariable Long id) {
 		Deck deck = deckService.findById(id);
 		deckService.delete(id, deck.getOwner());
 		return ResponseEntity.noContent().build();
 	}
 	
-	// ==================== Post/Notice Management ====================
+	// --- 게시글 관리 (페이징 필수 적용) ---
+	@Operation(summary = "List All Posts")
 	@GetMapping("/posts")
-	public ResponseEntity<List<PostResponse>> getAllPosts(@RequestParam(name = "q", required = false) String q) {
-		List<Post> posts = postService.search(q);
-		List<PostResponse> responses = posts.stream()
-				.map(this::mapToResponse)
-				.collect(Collectors.toList());
-		return ResponseEntity.ok(responses);
+	public ResponseEntity<Page<PostResponse>> getAllPosts(
+			@RequestParam(required = false) String q,
+			@PageableDefault(size = 20) Pageable pageable) {
+		Page<Post> posts = postService.search(q, null, pageable);
+		return ResponseEntity.ok(posts.map(this::mapToPostResponse));
 	}
 	
 	@PatchMapping("/posts/{id}/notice")
 	public ResponseEntity<PostResponse> toggleNotice(@PathVariable("id") Long id,
-													 @RequestParam(name = "isNotice") boolean isNotice,
-													 Authentication auth) {
+													 @RequestParam(name = "isNotice") boolean isNotice) {
 		Post post = postService.findById(id);
 		post.setNotice(isNotice);
 		postRepository.save(post);
-		return ResponseEntity.ok(mapToResponse(post));
+		return ResponseEntity.ok(mapToPostResponse(post));
 	}
 	
 	@DeleteMapping("/posts/{id}")
 	public ResponseEntity<Void> deletePost(@PathVariable Long id, Authentication auth) {
-		User adminUser = (User) auth.getPrincipal();
+		User adminUser = (auth != null && auth.getPrincipal() instanceof User) ? (User) auth.getPrincipal() : null;
 		postService.delete(id, adminUser);
 		return ResponseEntity.noContent().build();
 	}
 	
-	// ==================== Helper Methods ====================
-	private Set<Role> parseRoles(Set<String> roleStrings) {
-		if (roleStrings == null || roleStrings.isEmpty()) {
-			Set<Role> defaultRoles = new HashSet<>();
-			defaultRoles.add(Role.ROLE_USER);
-			return defaultRoles;
-		}
-		Set<Role> roles = new HashSet<>();
-		for (String r : roleStrings) {
-			try {
-				roles.add(Role.valueOf(r));
-			} catch (IllegalArgumentException e) {
-				// Skip invalid roles
-			}
-		}
-		if (roles.isEmpty()) {
-			roles.add(Role.ROLE_USER);
-		}
-		return roles;
+	// --- 매핑 헬퍼 메서드 ---
+	private AdminUserResponse mapToUserResponse(User user) {
+		return new AdminUserResponse(
+				user.getId(),
+				user.getEmail(),
+				user.getStatus().name(),
+				Collections.singleton(user.getRole()),
+				null
+		);
 	}
 	
-	private PostResponse mapToResponse(Post post) {
-		List<String> attachmentUrls = post.getAttachments() == null ? java.util.Collections.emptyList()
-				: post.getAttachments().stream()
-				.map(a -> "/uploads/" + a.getStoreFilename())
-				.collect(Collectors.toList());
-		return new PostResponse(post.getId(), post.getTitle(), post.getContent(), post.getLikeCount(),
-				post.getAuthorName(), attachmentUrls, post.isNotice(),
-				post.getAuthor() != null ? post.getAuthor().getId() : null);
+	private PostResponse mapToPostResponse(Post post) {
+		List<String> urls = post.getAttachments() != null ?
+				post.getAttachments().stream().map(a -> "/uploads/" + a.getStoreFilename()).collect(Collectors.toList()) : List.of();
+		StudyRecruitment s = post.getStudyRecruitment();
+		return new PostResponse(
+				post.getId(),
+				post.getAuthor() != null ? post.getAuthor().getId() : null,
+				post.getTitle(),
+				post.getContent(),
+				post.getLikeCount(),
+				post.getViewCount(),
+				post.getAuthorName(),
+				urls,
+				post.isNotice(),
+				post.getCategory(),
+				s != null ? s.getRecruitmentStatus() : null,
+				s != null ? s.getStudyType() : null,
+				s != null ? s.getContactLink() : null,
+				post.getCreatedAt() != null ? post.getCreatedAt().atZone(java.time.ZoneId.systemDefault()).toInstant() : null
+		);
 	}
 }
